--- a/clicky/src/components/ClickItem/style.css
+++ b/clicky/src/components/ClickItem/style.css
@@ -4,7 +4,7 @@
   height: 170px;
   width: 170px;
   margin: 8px 25px;
-  border: 5px solid rgb(241, 241, 241);
+  border: 5px solid rgb(41, 21, 2);
   border-radius: 3px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   cursor: pointer;
@@ -12,7 +12,7 @@
 
 .click-item:hover {
   transform: scale(1.05);
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgb(231, 5, 5), 0 10px 10px rgb(109, 2, 2);
   transition: 0.1s;
 }
 
