--- a/clicky/src/components/Header/style.css
+++ b/clicky/src/components/Header/style.css
@@ -1,8 +1,7 @@
 .header {
-  background-color: #2C323C;
-  background-image: url("/assets/images/geometry.svg");
+  background-color: rgb(77, 36, 3);
   background-repeat: repeat;
-  color: white;
+  color: green;
   min-height: 400px;
   padding: 180px 20px; 
   padding-bottom: 140px;
